--- a/index.html
+++ b/index.html
@@ -11,16 +11,7 @@
     <body>
         <header>
             <h1>Livraria Comando</h1>
-<!--            <nav class="navbar navbar-dark bg-dark">Navbar
-                <ul>
-                    <li><a href="#principal">Principal</a></li>
-                    <li><a href="#quemsomos">Quem somos</a></li>
-                    <li><a href="#clubeda">Clube da leitura</a></li>
-                    <li><a href="#contato">Contato</a></li>
-                </ul>
-            </nav>
--->
-            <nav class="navbar navbar-expand-lg navbar-light">
+              <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid">
                   <a class="navbar-brand" href="#"></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
