--- a/cadastro-clube.html
+++ b/cadastro-clube.html
@@ -1,49 +1,59 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, inicial-scale=1.0">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-
-        <link rel="stylesheet" href="css/style.css">
-        <title>Livraria Comando</title>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, inicial-scale=1.0">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+      <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Homemade+Apple&family=Kaushan+Script&family=Nanum+Pen+Script&family=Special+Elite&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="css/style.css">
+      <title>Livraria Comando</title>
     </head>
-    <body>
+    <body oncopy="return false" oncut="return false">
         <header>
             <h1>Livraria Comando</h1>
-              <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <div class="container-fluid">
-                  <a class="navbar-brand" href="#"></a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#principal">Principal</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" href="#quemsomos" tabindex="-1" aria-disabled="true">Quem Somos</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" href="#clubeda" tabindex="-1" aria-disabled="true">Clube da leitura</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" href="#contato" tabindex="-1" aria-disabled="true">Contato</a>
-                      </li>
-                    </ul>
-                    <form class="d-flex">
-                      <input class="form-control me-2" type="Buscar" placeholder="Buscar" aria-label="Buscar">
-                      <button class="btn btn-outline-success" type="buscar">Buscar</button>
-                    </form>
-                  </div>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+              <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+
+                  <a class="navbar-brand" href="#">
+                    <img src="https://svgsilh.com/svg/1294676.svg" alt="icon" width="30" height="24" class="d-inline-block align-text-top">
+                    v 0.0.1
+                  </a>
+
+                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="#principal">Principal</a>
+                    </li>
+
+                    <li class="nav-item">
+                      <a class="nav-link active" href="#quemsomos" tabindex="-1" aria-disabled="true">Quem Somos</a>
+                    </li>
+
+                    <li class="nav-item">
+                      <a class="nav-link active" href="#clubeda" tabindex="-1" aria-disabled="true">Clube da leitura</a>
+                    </li>
+
+                    <li class="nav-item">
+                      <a class="nav-link active" href="#contato" tabindex="-1" aria-disabled="true">Contato</a>
+                    </li>
+                  </ul>
+
+                  <form class="d-flex">
+                    <input class="form-control me-2" type="buscar" placeholder="Buscar" aria-label="Buscar">
+                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                  </form>
                 </div>
-              </nav>
-            </header>
+              </div>
+            </nav>
+        </header>
             
             <main class="container-fluid">
                 <section class="row mx-5 mt-3 p-3 mb-3 rounded">
-                    <h2>_Cadastro de traça de livro.:</h2>
+                    <h2>.:Cadastro livraria comando_</h2>
                     <br><br>
                 <form  action="#" method="get">
                     <div class="row">
@@ -86,7 +96,7 @@
             </main>
             
             <footer>
-                <h6> Livraria Comando &copy;</h6>
+              <h6>Livraria Comando &copy; 2021</h6>
             </footer>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
         </body>
