--- a/index.html
+++ b/index.html
@@ -4,60 +4,115 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, inicial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/reset.css">
+        <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Homemade+Apple&family=Kaushan+Script&family=Nanum+Pen+Script&family=Special+Elite&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
+
+        <!-- Desativa botão Direito do mouse
+        <script language="JavaScript">
+          function protegercodigo() {
+          if (event.button==2||event.button==3){
+              alert('Codigo protegido!');}
+          }
+          document.onmousedown=protegercodigo
+      </script>
+-->
         <title>Livraria Comando</title>
     </head>
-    <body>
+    <body oncopy="return false" oncut="return false">
         <header>
             <h1>Livraria Comando</h1>
-              <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <div class="container-fluid">
-                  <a class="navbar-brand" href="#"></a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#principal">Principal</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" href="#quemsomos" tabindex="-1" aria-disabled="true">Quem Somos</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" href="#clubeda" tabindex="-1" aria-disabled="true">Clube da leitura</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" href="#contato" tabindex="-1" aria-disabled="true">Contato</a>
-                      </li>
-                    </ul>
-                    <form class="d-flex">
-                      <input class="form-control me-2" type="Buscar" placeholder="Buscar" aria-label="Buscar">
-                      <button class="btn btn-outline-success" type="buscar">Buscar</button>
-                    </form>
-                  </div>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+              <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+
+                  <a class="navbar-brand" href="#">
+                    <img src="https://svgsilh.com/svg/1294676.svg" alt="icon" width="30" height="24" class="d-inline-block align-text-top">
+                    v 0.0.1
+                  </a>
+
+                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="#principal">Principal</a>
+                    </li>
+
+                    <li class="nav-item">
+                      <a class="nav-link active" href="#quemsomos" tabindex="-1" aria-disabled="true">Quem Somos</a>
+                    </li>
+
+                    <li class="nav-item">
+                      <a class="nav-link active" href="#clubeda" tabindex="-1" aria-disabled="true">Clube da leitura</a>
+                    </li>
+
+                    <li class="nav-item">
+                      <a class="nav-link active" href="#contato" tabindex="-1" aria-disabled="true">Contato</a>
+                    </li>
+                  </ul>
+
+                  <form class="d-flex">
+                    <input class="form-control me-2" type="buscar" placeholder="Buscar" aria-label="Buscar">
+                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                  </form>
                 </div>
-              </nav>
+              </div>
+            </nav>
         </header>
 
-        <main>
-            <section id="quemsomos">
-                <h2>_Quem somos.:</h2>
-
+        <main class="container-fluid">
+          <section id="quemsomos" class="row justify-content-center text-center" style="background-image: url(img/background\ papeis\ velhos.jpg);">
+            <div class="col-lg-9 col-sm-12 text-light align-items-center">
+                <h2 class="display-1 pt-1 escrita-mao">Ler cura doenças intelectuais.</h2>
+                <small class="small">Obedes Lobadias</small>
+                  <div class="mt-5">
+                    <h4 class="bg-dark rounded p-5">
+                        A livraria comando tem mais de 880 anos de tradição em vender grandes clássicos
+                        da literatura, oferecer o <em>clube do comando</em> tem proporcionando momentos agradáveis
+                        de boa companhia e leitura prazerosa.
+                    </h4>
+                      <br>
+                      <a href="cadastro-clube.html" class="btn btn-outline-danger btn-lg mb-5">Conheça o Clube do Comando</a>
+                  </div>
+            </div>
             </section>
 
             <section id="clubeda">
-                <h2>_Clube da leitura.:</h2>
-                <form>
-                    <br><input type="text" id="nome" value="nome">
-                    <br><input type="text" id="email" value="e-mail">
-                    <br><input type="submit" id="assinar" value="Assinar">
-                </form>
+                <h2>.:Clube do Comando_</h2>
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                  <div class="col">
+                    <div class="card h-100">
+                      <img src="..." class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Titulo/cartão I</h5>
+                        <p class="card-text">Este é um cartão mais longo com texto de apoio abaixo como uma introdução natural para conteúdo adicional.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card h-100">
+                      <img src="..." class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Titulo/cartão II</h5>
+                        <p class="card-text">Este é um cartão curto.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card h-100">
+                      <img src="..." class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Titulo/cartão III</h5>
+                        <p class="card-text">Este é um cartão mais longo com texto de apoio abaixo como uma introdução natural para conteúdo adicional.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
             </section>
 
             <section id="contato">
-                <h2>_Contato.:</h2>
+                <h2>.:Contato_</h2>
             </section>
 
             <!-- não está funcionando, ainda...
@@ -72,7 +127,7 @@
         </main>
       
         <footer>
-            <h6> Livraria Comando &copy;</h6>
+            <h6>Livraria Comando &copy; 2021</h6>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
     </body>
