--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
 
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                   <a class="navbar-brand" href="#">
                     <img src="https://svgsilh.com/svg/1294676.svg" alt="icon" width="30" height="24" class="d-inline-block align-text-top">
                     v 0.0.1
@@ -62,12 +62,12 @@
         </header>
 
         <main class="container-fluid">
-          <section id="quemsomos" class="row justify-content-center text-center" style="background-image: url(img/background\ papeis\ velhos.jpg);">
+          <section id="quemsomos" class="row justify-content-center text-center" style="background-image: url(img/background\ papeis\ velhos.jpg)";>
             <div class="col-lg-9 col-sm-12 text-light align-items-center">
                 <h2 class="display-1 pt-1 escrita-mao">Ler cura doenças intelectuais.</h2>
                 <small class="small">Obedes Lobadias</small>
                   <div class="mt-5">
-                    <h4 class="bg-dark rounded p-5">
+                    <h4 class="bg-dark rounded-pill p-5">
                         A livraria comando tem mais de 880 anos de tradição em vender grandes clássicos
                         da literatura, oferecer o <em>clube do comando</em> tem proporcionando momentos agradáveis
                         de boa companhia e leitura prazerosa.
@@ -80,10 +80,10 @@
 
             <section id="clubeda">
                 <h2>.:Clube do Comando_</h2>
-                <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="row row-cols-1 row-cols-md-3 g-4 p-1">
                   <div class="col">
                     <div class="card h-100">
-                      <img src="..." class="card-img-top" alt="...">
+                      <img src="https://svgsilh.com/svg/1294676.svg" class="card-img-top" alt="1...">
                       <div class="card-body">
                         <h5 class="card-title">Titulo/cartão I</h5>
                         <p class="card-text">Este é um cartão mais longo com texto de apoio abaixo como uma introdução natural para conteúdo adicional.</p>
@@ -92,7 +92,7 @@
                   </div>
                   <div class="col">
                     <div class="card h-100">
-                      <img src="..." class="card-img-top" alt="...">
+                      <img src="https://svgsilh.com/svg/1294676.svg" class="card-img-top" alt="2...">
                       <div class="card-body">
                         <h5 class="card-title">Titulo/cartão II</h5>
                         <p class="card-text">Este é um cartão curto.</p>
@@ -101,7 +101,7 @@
                   </div>
                   <div class="col">
                     <div class="card h-100">
-                      <img src="..." class="card-img-top" alt="...">
+                      <img src="https://svgsilh.com/svg/1294676.svg" class="card-img-top" alt="3...">
                       <div class="card-body">
                         <h5 class="card-title">Titulo/cartão III</h5>
                         <p class="card-text">Este é um cartão mais longo com texto de apoio abaixo como uma introdução natural para conteúdo adicional.</p>
