--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         de boa companhia e leitura prazerosa.
                     </h4>
                       <br>
-                      <a href="cadastro-clube.html" class="btn btn-outline-danger btn-lg mb-5">Conheça o Clube do Comando</a>
+                      <a href="cadastro-clube2.html" class="btn btn-outline-danger btn-lg mb-5">Conheça o Clube do Comando</a>
                   </div>
             </div>
             </section>
