--- a/cadastro-clube.html
+++ b/cadastro-clube.html
@@ -6,11 +6,11 @@
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
       <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Homemade+Apple&family=Kaushan+Script&family=Nanum+Pen+Script&family=Special+Elite&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="css/style.css">
-      <title>Livraria Comando</title>
+      <title>Livraria Comando {ANTIGO}</title>
     </head>
     <body oncopy="return false" oncut="return false">
         <header>
-            <h1>Livraria Comando</h1>
+            <h1>Livraria Comando {ANTIGO}</h1>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
               <div class="container-fluid">
@@ -21,24 +21,24 @@
 
                   <a class="navbar-brand" href="#">
                     <img src="https://svgsilh.com/svg/1294676.svg" alt="icon" width="30" height="24" class="d-inline-block align-text-top">
-                    v 0.0.1
+                    v 0.0.1 {ANTIGO}
                   </a>
 
                   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#principal">Principal</a>
+                      <a class="nav-link active" aria-current="page" href="#principal">Principal {ANTIGO}</a>
                     </li>
 
                     <li class="nav-item">
-                      <a class="nav-link active" href="#quemsomos" tabindex="-1" aria-disabled="true">Quem Somos</a>
+                      <a class="nav-link active" href="#quemsomos" tabindex="-1" aria-disabled="true">Quem Somos {ANTIGO}</a>
                     </li>
 
                     <li class="nav-item">
-                      <a class="nav-link active" href="#clubeda" tabindex="-1" aria-disabled="true">Clube da leitura</a>
+                      <a class="nav-link active" href="#clubeda" tabindex="-1" aria-disabled="true">Clube da leitura {ANTIGO}</a>
                     </li>
 
                     <li class="nav-item">
-                      <a class="nav-link active" href="#contato" tabindex="-1" aria-disabled="true">Contato</a>
+                      <a class="nav-link active" href="#contato" tabindex="-1" aria-disabled="true">Contato {ANTIGO}</a>
                     </li>
                   </ul>
 
@@ -58,14 +58,14 @@
                 <form  action="#" method="get">
                     <div class="row">
                         <div class="col">
-                            <label for="nome" class="form-label">1. Nome.:</label>
+                            <label for="nome" class="form-label">1. Nome.: {ANTIGO}</label>
                             <input type="text" class="form-control" id="nome" placeholder="Digite o seu nome completo">
                         </div>
 
                         <div class="col">
-                            <label for="sexo" class="form-label">2. Sexo.:</label>
+                            <label for="sexo" class="form-label">2. Sexo.: {ANTIGO}</label>
                             <select class="form-select" aria-label="Default select example" id="sexo">
-                                <option selected>Selecione a opção</option>
+                                <option selected disabled value="">Selecione a opção</option>
                                 <option value="Masculino">Masculino</option>
                                 <option value="Feminino">Feminino</option>
                                </select>
@@ -73,21 +73,21 @@
                     </div>
                     <div class="row">
                         <div class="col">
-                            <label for="email" class="form-label">3. E-mail.:</label>
+                            <label for="email" class="form-label">3. E-mail.: {ANTIGO}</label>
                             <input type="email" class="form-control" id="email" placeholder="Digite o seu e-mail completo">
                         </div>
                         <div class="col">
-                            <label for="telefone" class="form-label">4. Telefone.:</label>
+                            <label for="telefone" class="form-label">4. Telefone.: {ANTIGO}</label>
                             <input type="tel" class="form-control" id="telefone" placeholder="Somente numeros">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col">
-                            <label for="nascimento" class="form-label">5. Data de Nascimento.:</label>
+                            <label for="nascimento" class="form-label">5. Data de Nascimento.: {ANTIGO}</label>
                             <input type="date" class="form-control" id="nascimento">
                         </div>
                         <div class="col">
-                            <label for="endereco" class="form-label">6. Endereço.:</label>
+                            <label for="endereco" class="form-label">6. Endereço.: {ANTIGO}</label>
                             <input type="text" class="form-control" id="endereco" placeholder="Digite o seu endereço">                                
                         </div>
                     </div>
@@ -97,7 +97,7 @@
             </main>
             
             <footer>
-              <h6>Livraria Comando &copy; 2021</h6>
+              <h6>Livraria Comando  {ANTIGO}&copy; 2021</h6>
             </footer>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
         </body>
