--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                       <img src="https://svgsilh.com/svg/1294676.svg" class="card-img-top" alt="1...">
                       <div class="card-body">
                         <div class="m-3 mx-auto">
-                          <a href="cadastro-clube2.html" class="btn btn-outline-danger btn-lg btn-toolbar btn-primary">Receber</a>
+                          <a href="cadastro-clube2.html" class="btn btn-outline-danger btn-lg btn-toolbar">Receber</a>
                         </div>
                         <h5 class="card-title">Titulo/cartão I</h5>
                         <p class="card-text">Este é um cartão mais longo com texto de apoio abaixo como uma introdução natural para conteúdo adicional.</p>
@@ -116,7 +116,7 @@
                       <img src="https://svgsilh.com/svg/1294676.svg" class="card-img-top" alt="2...">
                       <div class="card-body">
                         <div class="m-3 mx-auto">
-                          <a href="cadastro-clube2.html" class="btn btn-outline-danger btn-lg btn-toolbar btn-primary">Receber</a>
+                          <a href="cadastro-clube2.html" class="btn btn-outline-danger btn-lg btn-toolbar">Receber</a>
                         </div>
                         <h5 class="card-title">Titulo/cartão II</h5>
                         <p class="card-text">Este é um cartão curto.</p>
@@ -129,7 +129,7 @@
                       <img src="https://svgsilh.com/svg/1294676.svg" class="card-img-top" alt="3...">
                       <div class="card-body">
                         <div class="m-3 mx-auto">
-                          <a href="cadastro-clube2.html" class="text-center btn btn-outline-danger btn-lg btn-toolbar btn-primary">Receber</a>
+                          <a href="cadastro-clube2.html" class="btn btn-outline-danger btn-lg btn-toolbar">Receber</a>
                         </div>
                         <h5 class="card-title">Titulo/cartão III</h5>
                         <p class="card-text">Este é um cartão mais longo com texto de apoio abaixo como uma introdução natural para conteúdo adicional.</p>
