--- a/cadastro-clube2.html
+++ b/cadastro-clube2.html
@@ -73,7 +73,7 @@
                       <div class="row">
                         <div class="col-lg col-sm-12 mb-3">
                           <div class="form-floating mb-lg-3 form-control-sm">
-                            <input type="text" class="form-control form-control-sm" id="nome" placeholder="Digite o seu endereço completo" required>
+                            <input type="text"  maxlength="55" class="form-control form-control-sm" id="nome" placeholder="Digite o seu endereço completo" required>
                             <label for="nome">Nome completo</label>
                           </div>
                         </div>
@@ -83,7 +83,7 @@
                       <div class="row">
                         <div class="col-lg-4 col-sm-12 mb-3">
                           <div class="form-floating mb-lg-3 form-control-sm">
-                            <input type="number" class="form-control form-control-sm" id="telefone" placeholder="Somente numeros" required>
+                            <input type="text" maxlength="11" class="form-control form-control-sm" id="telefone" placeholder="Somente numeros" required>
                             <label for="cpf">CPF</label>
                           </div>
                         </div>
@@ -110,14 +110,14 @@
                       <div class="row">
                         <div class="col-lg-6 col-sm-12 mb-3">
                           <div class="form-floating mb-lg-3 form-control-sm">
-                            <input type="email" class="form-control form-control-sm" id="email" placeholder="Digite o seu e-mail completo" required>
+                            <input type="email"  maxlength="55" class="form-control form-control-sm" id="email" placeholder="Digite o seu e-mail completo" required>
                             <label for="email">E-mail</label>
                           </div>
                         </div>
 
                         <div class="col-lg-6 col-sm-12 mb-3">
                           <div class="form-floating mb-lg-3 form-control-sm ">
-                            <input type="tel" class="form-control form-control-sm" id="telefone" placeholder="Digite o seu telefone" required>
+                            <input type="tel"  maxlength="16" class="form-control form-control-sm" id="telefone" placeholder="Digite o seu telefone" required>
                             <label for="telefone">Telefone</label>
                           </div>
                         </div>
@@ -127,7 +127,7 @@
                       <div class="row">
                         <div class="col-lg col-sm-12 mb-3">
                           <div class="form-floating mb-lg-3 form-control-sm">
-                            <input type="text" class="form-control form-control-sm" id="endereco" placeholder="Digite o seu endereço completo" required>
+                            <input type="text"  maxlength="100" class="form-control form-control-sm" id="endereco" placeholder="Digite o seu endereço completo" required>
                             <label for="endereco">Endereço completo</label>
                           </div>
                         </div>
@@ -137,21 +137,21 @@
                       <div class="row">
                         <div class="col-lg-4 col-sm-12 mb-3">
                           <div class="form-floating mb-lg-3 form-control-sm">
-                            <input type="text" class="form-control form-control-sm" id="numero" placeholder="Digite o seu numero de endereço" required>
+                            <input type="text"  maxlength="4" class="form-control form-control-sm" id="numero" placeholder="Digite o seu numero de endereço" required>
                             <label for="numero">Numero</label>
                           </div>
                         </div>
 
                         <div class="col-lg-4 col-sm-12 mb-3">
                           <div class="form-floating mb-lg-3 form-control-sm">
-                            <input type="text" class="form-control form-control-sm" id="bairro" placeholder="Digite o seu Bairro" required>
+                            <input type="text" maxlength="30" class="form-control form-control-sm" id="bairro" placeholder="Digite o seu Bairro" required>
                             <label for="Bairro">Bairro</label>
                           </div>
                         </div>
 
                         <div class="col-lg-4 col-sm-12 mb-3">
                           <div class="form-floating mb-lg-3 form-control-sm">
-                            <input type="text" class="form-control form-control-sm" id="cidade" placeholder="Digite a cidade" required>
+                            <input type="text"  maxlength="30" class="form-control form-control-sm" id="cidade" placeholder="Digite a cidade" required>
                             <label for="cidade">Cidade</label>
                           </div>
                         </div>
@@ -195,7 +195,7 @@
                         </div>
                         <div class="col-lg-6 col-sm-12 mb-3">
                           <div class="form-floating mb-lg-3 form-control-sm">
-                            <input type="text" class="form-control form-control-sm" id="cep" placeholder="Digite o seu cep" required>
+                            <input type="text"  maxlength="9" class="form-control form-control-sm" id="cep" placeholder="Digite o seu cep" required>
                             <label for="cep">CEP</label>
                           </div>
                         </div>
