--- a/cadastro-clube2.html
+++ b/cadastro-clube2.html
@@ -137,7 +137,7 @@
                       <div class="row">
                         <div class="col-lg-4 col-sm-12 mb-3">
                           <div class="form-floating mb-lg-3 form-control-sm">
-                            <input type="text"  maxlength="4" class="form-control form-control-sm" id="numero" placeholder="Digite o seu numero de endereço" required>
+                            <input type="number"  maxlength="4" class="form-control form-control-sm" id="numero" placeholder="Digite o seu numero de endereço" required>
                             <label for="numero">Numero</label>
                           </div>
                         </div>
