--- a/cadastro-clube2.html
+++ b/cadastro-clube2.html
@@ -55,12 +55,12 @@
                 <section class="row mx-5 mt-3 p-3 mb-3 rounded-pi">
                     <h2>.:Cadastro livraria comando_</h2>
                     <br><br>
-<!-- estrutura linha para n colunas
+<!-- estrutura linha para n colunas #007bff 
                     <div class="row">
                       <div class="col">coluna 1</div>
                       <div class="col">coluna 2</div>
                     </div>-->
-                    <form  action="#" method="get">
+                    <form  action="cadastro-cliente.php" method="POST">
 
                       <div class="col m-2">
                         <p class="text-center">Cadastre-se no clube da traça e todo mês você receberá, em sua casa, 
@@ -69,11 +69,18 @@
                         </p>
                        </div>
 
-                       <h4 class="mb-3">1.Dados Pessoais_</h4>
+                      <h4 class="mb-3">1.Dados Pessoais_</h4>
                       <div class="row">
                         <div class="col-lg col-sm-12 mb-3">
                           <div class="form-floating mb-lg-3 form-control-sm">
-                            <input type="text"  maxlength="55" class="form-control form-control-sm" id="nome" placeholder="Digite o seu endereço completo" required>
+                            <input type="text"
+                                   maxlength="55" 
+                                   size="55" 
+                                   pattern="^(([a-zA-Z ]|[\p{L}])*)$"
+                                   class="form-control form-control-sm" 
+                                   id="nome" 
+                                   placeholder="Digite o seu nome completo"
+                                   required>
                             <label for="nome">Nome completo</label>
                           </div>
                         </div>
@@ -83,14 +90,25 @@
                       <div class="row">
                         <div class="col-lg-4 col-sm-12 mb-3">
                           <div class="form-floating mb-lg-3 form-control-sm">
-                            <input type="text" maxlength="11" class="form-control form-control-sm" id="telefone" placeholder="Somente numeros" required>
+                            <input type="text"
+                                   maxlength="11"
+                                   size="11" 
+                                   pattern="[0-9]{3}\.?[0-9]{3}\.?[0-9]{3}\-?[0-9]{2}"
+                                   class="form-control form-control-sm"
+                                   id="telefone"
+                                   placeholder="Somente numeros"
+                                   required>
                             <label for="cpf">CPF</label>
                           </div>
                         </div>
 
                         <div class="col-lg-4 col-sm-12 mb-3">
                           <div class="form-floating mb-lg-3 form-control-sm">
-                            <input type="date" class="form-control form-control-sm" id="nascimento" required>
+                            <input type="date"
+                                   max="9999-12-31"
+                                   class="form-control form-control-sm"
+                                   id="nascimento"
+                                   required>
                             <label for="nascimento">Nascimento</label>
                           </div>
                         </div>
@@ -98,7 +116,10 @@
                         <div class="col-lg-4 col-sm-12 mb-3">
                           <div class="form-floating mb-lg-3 form-control-sm">
                             <label for="sexo" class="py-1 m-0">Sexo</label>
-                            <select class="form-select mb-lg-3 form-control-sm" id="sexo" required>
+                            <select
+                                   class="form-select mb-lg-3 form-control-sm"
+                                   id="sexo"
+                                   required>
                               <option selected disabled value="">Não informado</option>
                               <option value="1">Masculino</option>
                               <option value="2">Feminino</option>
@@ -110,14 +131,28 @@
                       <div class="row">
                         <div class="col-lg-6 col-sm-12 mb-3">
                           <div class="form-floating mb-lg-3 form-control-sm">
-                            <input type="email"  maxlength="55" class="form-control form-control-sm" id="email" placeholder="Digite o seu e-mail completo" required>
+                            <input type="email"
+                                   maxlength="55"
+                                   size="55" 
+                                   pattern="^([-a-zA-Z0-9_.-]*@(gmail|yahoo|ymail|rocketmail|bol|hotmail|live|msn|ig|globomail|oi|pop|r7|folha|zipmail).(com|info|gov|net|org|tv)(.[-a-z]{2})?)*$"
+                                   class="form-control form-control-sm"
+                                   id="email" 
+                                   placeholder="Digite o seu e-mail principal"
+                                   required>
                             <label for="email">E-mail</label>
                           </div>
                         </div>
 
                         <div class="col-lg-6 col-sm-12 mb-3">
                           <div class="form-floating mb-lg-3 form-control-sm ">
-                            <input type="tel"  maxlength="16" class="form-control form-control-sm" id="telefone" placeholder="Digite o seu telefone" required>
+                            <input type="tel"
+                                   maxlength="13"
+                                   size="13" 
+                                   pattern="^\(?[1-9]{2}\)? ?(?:[2-8]|9[1-9])[0-9]{3}\-?[0-9]{4}$"
+                                   class="form-control form-control-sm"
+                                   id="telefone"
+                                   placeholder="Digite o seu telefone"
+                                   required>
                             <label for="telefone">Telefone</label>
                           </div>
                         </div>
@@ -127,7 +162,13 @@
                       <div class="row">
                         <div class="col-lg col-sm-12 mb-3">
                           <div class="form-floating mb-lg-3 form-control-sm">
-                            <input type="text"  maxlength="100" class="form-control form-control-sm" id="endereco" placeholder="Digite o seu endereço completo" required>
+                            <input type="text"
+                                   maxlength="100"
+                                   size="100"
+                                   class="form-control form-control-sm"
+                                   id="endereco"
+                                   placeholder="Digite o seu endereço completo"
+                                   required>
                             <label for="endereco">Endereço completo</label>
                           </div>
                         </div>
@@ -137,21 +178,41 @@
                       <div class="row">
                         <div class="col-lg-4 col-sm-12 mb-3">
                           <div class="form-floating mb-lg-3 form-control-sm">
-                            <input type="number"  maxlength="4" class="form-control form-control-sm" id="numero" placeholder="Digite o seu numero de endereço" required>
+                            <input type="text"
+                                   min="1" 
+                                   max="9999" 
+                                   maxlength="4" 
+                                   pattern="\d*" 
+                                   class="form-control form-control-sm" 
+                                   id="numero" 
+                                   placeholder="Digite o seu numero de endereço" 
+                                   required>
                             <label for="numero">Numero</label>
                           </div>
                         </div>
 
                         <div class="col-lg-4 col-sm-12 mb-3">
                           <div class="form-floating mb-lg-3 form-control-sm">
-                            <input type="text" maxlength="30" class="form-control form-control-sm" id="bairro" placeholder="Digite o seu Bairro" required>
+                            <input type="text" 
+                                   maxlength="30" 
+                                   size="30" 
+                                   class="form-control form-control-sm" 
+                                   id="bairro" 
+                                   placeholder="Digite o seu Bairro" 
+                                   required>
                             <label for="Bairro">Bairro</label>
                           </div>
                         </div>
 
                         <div class="col-lg-4 col-sm-12 mb-3">
                           <div class="form-floating mb-lg-3 form-control-sm">
-                            <input type="text"  maxlength="30" class="form-control form-control-sm" id="cidade" placeholder="Digite a cidade" required>
+                            <input type="text" 
+                                   maxlength="30" 
+                                   size="30" 
+                                   class="form-control form-control-sm" 
+                                   id="cidade" 
+                                   placeholder="Digite a cidade" 
+                                   required>
                             <label for="cidade">Cidade</label>
                           </div>
                         </div>
@@ -161,7 +222,9 @@
                         <div class="col-lg-6 col-sm-12 mb-3">
                           <div class="form-floating mb-lg-3 form-control-sm">
                             <label class="py-1 m-0" for="estado">Estado</label>
-                            <select class="form-select" id="estado" required>
+                            <select class="form-select" 
+                                    id="estado" 
+                                    required>
                                 <option selected disabled value="">Não informado</option>
                                 <option value="AC">Acre</option>
                                 <option value="AL">Alagoas</option>
@@ -195,7 +258,13 @@
                         </div>
                         <div class="col-lg-6 col-sm-12 mb-3">
                           <div class="form-floating mb-lg-3 form-control-sm">
-                            <input type="text"  maxlength="9" class="form-control form-control-sm" id="cep" placeholder="Digite o seu cep" required>
+                            <input type="text"
+                                   maxlength="9"
+                                   size="9" 
+                                   class="form-control form-control-sm" 
+                                   id="cep" 
+                                   placeholder="Digite o seu cep" 
+                                   required>
                             <label for="cep">CEP</label>
                           </div>
                         </div>
@@ -205,7 +274,9 @@
                         Senha de Acesso - 
                         <small>
                           <label>
-                            <input type="checkbox" id="versenha" class="form-check-input"> ver senha
+                            <input type="checkbox"
+                                   id="versenha" 
+                                   class="form-check-input"> ver senha
                           </label>  
                         </small>
                     </h4>
@@ -213,21 +284,35 @@
                     <div class="row mb-3">
                         <div class="col-lg-6 col-sm-12 mb-3">
                             <label for="senhaA" class="form-label">Senha:</label>
-                            <input type="password" class="form-control" id="senhaA" name="senha" required>
+                            <input type="password"
+                                   class="form-control"
+                                   id="senhaA"
+                                   name="senha"
+                                   required>
                         </div>
 
                         <div class="col-lg-6 col-sm-12 mb-3">
                             <label for="senhaB" class="form-label">Confirme a senha:</label>
-                            <input type="password" class="form-control" id="senhaB" required>
+                            <input type="password"
+                                   class="form-control"
+                                   id="senhaB"
+                                   required>
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col-lg-2 col-sm-12 mb-3">
-                            <input type="submit" value="Cadastrar" id="enviar" class="btn btn-primary btn-lg">
+                            <input type="submit"
+                                   value="Cadastrar" 
+                                   id="enviar" 
+                                   class="btn btn-primary btn-lg">
                         </div>
                         <div class="col-lg-10 col-sm-12 mb-3 form-check">
-                            <input type="checkbox" name="termos" id="termos" class="form-check-input" required>
+                            <input type="checkbox" 
+                                   name="termos"
+                                   id="termos"
+                                   class="form-check-input"
+                                   required>
                             <label for="termos" class="form-check-label">
                                <a href="Termo-Privacidade.html" target="_blank">Termos de Privacidade</a> | 
                                <a href="Termo-Uso.html" target="_blank">Termos de Uso</a>
