--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         
                         <form method="post" action="https://api.staticforms.xyz/submit">                      <!-- via static forms -->
                           <input type="hidden" name="accessKey" value="5f0e63e6-9f85-4274-9ac1-8d691018c252"> <!-- Requiredo -->
-                          <input type="hidden" name="redirectTo" value="Location:'index.php'"> <!-- Requiredo para redirecionamento -->
+                          <input type="hidden" name="redirectTo" value="aguardando endereço site"> <!-- Requiredo para redirecionamento -->
 
                             <div class="form-floating mb-3 my-3 mx-2">
                               <input type="text"
